--- a/NetCoreCMS.Web/Modules/NetCoreCMS.MatGallery/Views/MatgModule/Log.cshtml
+++ b/NetCoreCMS.Web/Modules/NetCoreCMS.MatGallery/Views/MatgModule/Log.cshtml
@@ -29,6 +29,7 @@
                             <th>Category</th>
                             <th>Author</th>
                             <th>CreatedBy</th>
+                            <th>Is Private</th>
                             <th>Status</th>
                         </tr>
                     </thead>
@@ -45,6 +46,7 @@
                                 <td>@item.Category</td>
                                 <td>@item.Author</td>
                                 <td>@item.CreateBy</td>
+                                <td>@item.IsPrivate</td>
                                 <td>@item.Status</td>
                             </tr>
                         }
