--- a/NetCoreCMS.Web/Themes/Default/Shared/Layouts/_SiteLayout.cshtml
+++ b/NetCoreCMS.Web/Themes/Default/Shared/Layouts/_SiteLayout.cshtml
@@ -95,26 +95,18 @@
                                     foreach (var widget in widgets)
                                     {
                                         widget.Init(item.Id);
-                                        <div>
-                                            <div class='panel panel-default'> 
+                                        if (widget.DisplayTitle != "" || widget.Footer != "")
+                                        {
+                                            <div class='panel panel-default'>
                                                 @if (widget.DisplayTitle != "")
                                                 {
                                                     <div class='panel-heading'>
                                                         @Html.Raw(widget.DisplayTitle)
                                                     </div>
-                                                }    
-                                                @if (widget.DisplayTitle != "" || widget.Footer != "")
-                                                {
-                                                    <div class='panel-body'>
-                                                        @Html.Raw(widget.RenderBody())
-                                                    </div>
                                                 }
-                                                else
-                                                {
-                                                    <div>
-                                                        @Html.Raw(widget.RenderBody())
-                                                    </div>                                                    
-                                                }
+                                                <div class='panel-body'>
+                                                    @Html.Raw(widget.RenderBody())
+                                                </div>
                                                 @if (widget.Footer != "")
                                                 {
                                                     <div class='panel-footer'>
@@ -122,7 +114,13 @@
                                                     </div>
                                                 }
                                             </div>
-                                        </div>
+                                        }
+                                        else
+                                        {
+                                            <div>
+                                                @Html.Raw(widget.RenderBody())
+                                            </div>
+                                        }
                                     }
                                 }
                             </div>
@@ -198,12 +196,13 @@
                                 foreach (var widget in widgets)
                                 {
                                     widget.Init(item.Id);
-                                    <div>
+                                    if (widget.DisplayTitle != "" || widget.Footer != "")
+                                    {
                                         <div class='panel panel-default'>
                                             @if (widget.DisplayTitle != "")
                                             {
                                                 <div class='panel-heading'>
-                                                    @Html.Raw(widget.DisplayTitle)                                                    
+                                                    @Html.Raw(widget.DisplayTitle)
                                                 </div>
                                             }
                                             <div class='panel-body'>
@@ -216,7 +215,13 @@
                                                 </div>
                                             }
                                         </div>
-                                    </div>
+                                    }
+                                    else
+                                    {
+                                        <div>
+                                            @Html.Raw(widget.RenderBody())
+                                        </div>
+                                    }
                                 }
                             }
                         </div>
@@ -267,23 +272,32 @@
                                 foreach (var widget in widgets)
                                 {
                                     widget.Init(item.Id);
-                                    <div class='panel panel-default'>
-                                        @if (widget.DisplayTitle != "")
-                                        {
-                                            <div class='panel-heading'>
-                                                @Html.Raw(widget.DisplayTitle)
+                                    if (widget.DisplayTitle != "" || widget.Footer != "")
+                                    {
+                                        <div class='panel panel-default'>
+                                            @if (widget.DisplayTitle != "")
+                                            {
+                                                <div class='panel-heading'>
+                                                    @Html.Raw(widget.DisplayTitle)
+                                                </div>
+                                            }
+                                            <div class='panel-body'>
+                                                @Html.Raw(widget.RenderBody())
                                             </div>
-                                        }
-                                        <div class='panel-body'>
+                                            @if (widget.Footer != "")
+                                            {
+                                                <div class='panel-footer'>
+                                                    @Html.Raw(widget.Footer)
+                                                </div>
+                                            }
+                                        </div>
+                                    }
+                                    else
+                                    {
+                                        <div>
                                             @Html.Raw(widget.RenderBody())
                                         </div>
-                                        @if (widget.Footer != "")
-                                        {
-                                            <div class='panel-footer'>
-                                                @Html.Raw(widget.Footer)
-                                            </div>
-                                        }
-                                    </div>
+                                    }
                                 }
                             }
                         </div>
@@ -308,32 +322,32 @@
                                     foreach (var widget in widgets)
                                     {
                                         widget.Init(item.Id);
-                                        <div class='panel panel-default'>
-                                            @if (widget.DisplayTitle != "")
-                                            {
-                                                <div class='panel-heading'>
-                                                    @Html.Raw(widget.DisplayTitle)
-                                                </div>
-                                            }
-                                            @if (widget.DisplayTitle != "" || widget.Footer != "")
-                                            {
+                                        if (widget.DisplayTitle != "" || widget.Footer != "")
+                                        {
+                                            <div class='panel panel-default'>
+                                                @if (widget.DisplayTitle != "")
+                                                {
+                                                    <div class='panel-heading'>
+                                                        @Html.Raw(widget.DisplayTitle)
+                                                    </div>
+                                                }
                                                 <div class='panel-body'>
                                                     @Html.Raw(widget.RenderBody())
                                                 </div>
-                                            }
-                                            else
-                                            {
-                                                <div>
-                                                    @Html.Raw(widget.RenderBody())
-                                                </div>
-                                            }
-                                            @if (widget.Footer != "")
-                                            {
-                                                <div class='panel-footer'>
-                                                    @Html.Raw(widget.Footer)
-                                                </div>
-                                            }
-                                        </div>
+                                                @if (widget.Footer != "")
+                                                {
+                                                    <div class='panel-footer'>
+                                                        @Html.Raw(widget.Footer)
+                                                    </div>
+                                                }
+                                            </div>
+                                        }
+                                        else
+                                        {
+                                            <div>
+                                                @Html.Raw(widget.RenderBody())
+                                            </div>
+                                        }
                                     }
                                 }
                             </div>
@@ -405,32 +419,32 @@
                                     foreach (var widget in widgets)
                                     {
                                         widget.Init(item.Id);
-                                        <div class='panel panel-default'>
-                                            @if (widget.DisplayTitle != "")
-                                            {
-                                                <div class='panel-heading'>
-                                                    @Html.Raw(widget.DisplayTitle)
-                                                </div>
-                                            }
-                                            @if (widget.DisplayTitle != "" || widget.Footer != "")
-                                            {
+                                        if (widget.DisplayTitle != "" || widget.Footer != "")
+                                        {
+                                            <div class='panel panel-default'>
+                                                @if (widget.DisplayTitle != "")
+                                                {
+                                                    <div class='panel-heading'>
+                                                        @Html.Raw(widget.DisplayTitle)
+                                                    </div>
+                                                }
                                                 <div class='panel-body'>
                                                     @Html.Raw(widget.RenderBody())
                                                 </div>
-                                            }
-                                            else
-                                            {
-                                                <div>
-                                                    @Html.Raw(widget.RenderBody())
-                                                </div>
-                                            }
-                                            @if (widget.Footer != "")
-                                            {
-                                                <div class='panel-footer'>
-                                                    @Html.Raw(widget.Footer)
-                                                </div>
-                                            }
-                                        </div>
+                                                @if (widget.Footer != "")
+                                                {
+                                                    <div class='panel-footer'>
+                                                        @Html.Raw(widget.Footer)
+                                                    </div>
+                                                }
+                                            </div>
+                                        }
+                                        else
+                                        {
+                                            <div>
+                                                @Html.Raw(widget.RenderBody())
+                                            </div>
+                                        }
                                     }
                                 }
                             </div>
