--- a/NetCoreCMS.Web/Themes/NccSeventeen/Shared/Layouts/Parts/_RightColumn.cshtml
+++ b/NetCoreCMS.Web/Themes/NccSeventeen/Shared/Layouts/Parts/_RightColumn.cshtml
@@ -40,23 +40,32 @@
                 foreach (var widget in widgets)
                 {
                     widget.Init(item.Id);
-                    <div class='panel panel-default'>
-                        @if (widget.DisplayTitle != "")
-                        {
-                            <div class='panel-heading'>
-                                @Html.Raw(widget.DisplayTitle)
+                    if (widget.DisplayTitle != "" || widget.Footer != "")
+                    {
+                        <div class='panel panel-default'>
+                            @if (widget.DisplayTitle != "")
+                            {
+                                <div class='panel-heading'>
+                                    @Html.Raw(widget.DisplayTitle)
+                                </div>
+                            }
+                            <div class='panel-body'>
+                                @Html.Raw(widget.RenderBody())
                             </div>
-                        }
-                        <div class='panel-body'>
+                            @if (widget.Footer != "")
+                            {
+                                <div class='panel-footer'>
+                                    @Html.Raw(widget.Footer)
+                                </div>
+                            }
+                        </div>
+                    }
+                    else
+                    {
+                        <div>
                             @Html.Raw(widget.RenderBody())
                         </div>
-                        @if (widget.Footer != "")
-                        {
-                            <div class='panel-footer'>
-                                @Html.Raw(widget.Footer)
-                            </div>
-                        }
-                    </div>
+                    }
                 }
             }
         </div>
