--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/Widgets/CmsVerticalMenuConfig.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/Widgets/CmsVerticalMenuConfig.cshtml
@@ -1,7 +1,6 @@
-﻿<div class="form-group">
+﻿@*<div class="form-group">
     <label class="col-sm-3 control-label">Menu Html</label>
     <div class="col-sm-9">
-        @*<input type="password" class="form-control" id="inputPassword3" placeholder="Password">*@
         <textarea class='form-control' id='urls' name='urls' cols='5' rows='5' placeholder="Enter Menu Html"></textarea>
     </div>
-</div>
+</div>*@
