--- a/NetCoreCMS.Web/Modules/NetCoreCMS.LinkShare/Views/LsCategory/Manage.cshtml
+++ b/NetCoreCMS.Web/Modules/NetCoreCMS.LinkShare/Views/LsCategory/Manage.cshtml
@@ -1,12 +1,13 @@
-﻿@using NetCoreCMS.ImageSlider.Models
+﻿@using NetCoreCMS.LinkShare.Models
 @using System.Collections
 
-@model List<NccImageSlider>
+@model List<LsCategory>
 
 @{
     Layout = Constants.AdminLayoutName;
-    ViewData["PageTitle"] = "Image Slider Manage";
-    ViewData["PageSubtitle"] = "Manage image slider contents and design";
+    ViewData["PageTitle"] = "Link Manage";
+    ViewData["PageSubtitle"] = "Manage existing links";
+    var controllerName = "LsCategory";
 }
     
 <div class="row">
@@ -14,17 +15,14 @@
         <div class="panel panel-default">
             <div class="panel-heading">
                 @ViewData["PageSubtitle"]
-                <div class="pull-right"><a asp-controller="ImageSliderHome" asp-action="CreateEdit" class="btn btn-outline btn-primary btn-xs">Add New</a></div>
+                <div class="pull-right"><a asp-controller="@controllerName" asp-action="CreateEdit" class="btn btn-outline btn-primary btn-xs">Add New</a></div>
             </div>
             <div class="panel-body">
                 <table id="pageListDt" class="table table-striped table-bordered" cellspacing="0" width="100%">
                     <thead>
                         <tr>
                             <th>Name</th>
-                            <th>Interval (sec)</th>
-                            <th>Image Width</th>
-                            <th>Image Height</th>
-                            <th>Total Slide</th>
+                            <th>Total Link</th>
                             <th>CreateBy</th>
                             <th>Status</th>
                             <th>Action</th>
@@ -35,12 +33,9 @@
                         {
                             <tr>
                                 <td>@item.Name</td>
-                                <td>@item.Interval</td>
-                                <td>@item.ImageWidth</td>
-                                <td>@item.ImageHeight</td>
-                                @if (item.ImageItems != null)
+                                @if (item.Links != null)
                                 {
-                                    <td>@item.ImageItems.Count()</td>
+                                    <td>@item.Links.Count()</td>
                                 }
                                 else
                                 {
@@ -49,8 +44,16 @@
                                 <td>@item.CreateBy</td>
                                 <td>@item.Status</td>
                                 <td>
-                                    <a asp-controller="ImageSliderHome" asp-action="CreateEdit" asp-route-id="@item.Id">Edit</a> |
-                                    <a asp-controller="ImageSliderHome" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                                    <a asp-controller="@controllerName" asp-action="CreateEdit" asp-route-id="@item.Id" class="btn btn-xs btn-primary btn-outline">Edit</a>
+                                    @if (item.Status == -2)
+                                    {
+                                        <a asp-controller="@controllerName" asp-action="StatusUpdate" asp-route-id="@item.Id" class="btn btn-xs btn-success btn-outline">Active</a>
+                                    }
+                                    else
+                                    {
+                                        <a asp-controller="@controllerName" asp-action="StatusUpdate" asp-route-id="@item.Id" class="btn btn-xs btn-danger btn-outline">Inactive</a>
+                                    }
+                                    <a asp-controller="@controllerName" asp-action="Delete" asp-route-id="@item.Id" class="btn btn-xs btn-danger">Delete</a>
                                 </td>
                             </tr>
                         }
