--- a/NetCoreCMS.Web/Modules/NetCoreCMS.LinkShare/Views/Widgets/LinkShare.cshtml
+++ b/NetCoreCMS.Web/Modules/NetCoreCMS.LinkShare/Views/Widgets/LinkShare.cshtml
@@ -1,67 +1,39 @@
 ﻿@using NetCoreCMS.LinkShare.Models
 @using System.Collections
-
+@{
+    var i = 0;
+}
 @model LsLinkViewModel
 
-<div class="@Model.ColumnClass">
-    <div id="nccImageSlider" class="carousel slide" data-ride="carousel" data-interval="@(Model.Interval * 1000)">
-        @if (Model.ShowNav == true)
-        {
-            <ol class="carousel-indicators">
-                @{var i = 0; }
-                @foreach (var item in Model.ImageItems)
+<div class="row">
+    <div class="@Model.ColumnClass">
+        <div class='panel panel-default'>
+            @if (Model.HeaderTitle != "")
+            {
+                <div class='panel-heading' style="color:@Model.ColumnColor; background-color:@Model.ColumnBgColor;">
+                    @Html.Raw(Model.HeaderTitle)
+                </div>
+            }
+            <div class='panel-body'>
+                @foreach (var item in Model.LsLinkList)
                 {
                     if (i == 0)
                     {
-                            <li data-target="#nccImageSlider" data-slide-to="@i" class="active"></li>
+                        i = 1;
                     }
                     else
                     {
-                            <li data-target="#nccImageSlider" data-slide-to="@i"></li>
+                        <hr />
                     }
-                    i++;
+                    <p><a href="@item.Link">@item.Name</a></p>
                 }
-            </ol>
-        }
-        <div class="carousel-inner" role="listbox">
-            @{var j = 0; }
-            @foreach (var item in Model.ImageItems)
+            </div>
+            @if (Model.FooterTitle != "")
             {
-                if (j == 0)
-                {
-                        <div class="item active">
-                            <img src="@item.Path" alt="Ncc Slider Image" class="img-responsive" width="@Model.ImageWidth" height="@Model.ImageHeight">
-                            <div class="carousel-caption" role="option">
-                                <p>
-                                    @Html.Raw(item.Description)
-                                </p>
-                            </div>
-                        </div>
-                }
-                else
-                {
-                        <div class="item">
-                            <img src="@item.Path" alt="Ncc Slider Image" class="img-responsive" width="@Model.ImageWidth" height="@Model.ImageHeight">
-                            <div class="carousel-caption" role="option">
-                                <p>
-                                    @Html.Raw(item.Description)
-                                </p>
-                            </div>
-                        </div>
-                }
-                j++;
+                <div class='panel-footer' style="color:@Model.ColumnColor; background-color:@Model.ColumnBgColor;">
+                    @Html.Raw(Model.FooterTitle)
+                </div>
             }
         </div>
-        @if (Model.ShowSideNav == true)
-        {
-            <a class="left carousel-control" href="#nccImageSlider" role="button" data-slide="prev">
-                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="right carousel-control" href="#nccImageSlider" role="button" data-slide="next">
-                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
-        }
     </div>
 </div>
