--- a/NetCoreCMS.Web/Modules/NetCoreCMS.LinkShare/Views/Widgets/LinkShareConfig.cshtml
+++ b/NetCoreCMS.Web/Modules/NetCoreCMS.LinkShare/Views/Widgets/LinkShareConfig.cshtml
@@ -1,4 +1,10 @@
 ﻿<div class="form-group">
+    <label class="col-sm-3 control-label">Head</label>
+    <div class="col-sm-9">
+        <input type="text" class="form-control" id="headerTitle" name="headerTitle" placeholder="Enter Head">
+    </div>
+</div>
+<div class="form-group">
     <label class="col-sm-3 control-label">Category</label>
     <div class="col-sm-9">
         <input type="text" class="form-control" id="category" name="category" placeholder="Enter Category">
@@ -11,8 +17,20 @@
     </div>
 </div>
 <div class="form-group">
-    <label class="col-sm-3 control-label">Column Color</label>
+    <label class="col-sm-3 control-label">Color</label>
     <div class="col-sm-9">
         <input type="text" class="form-control" id="columnColor" name="columnColor" placeholder="Enter column Color #000000">
+    </div>
+</div>
+<div class="form-group">
+    <label class="col-sm-3 control-label">BG Color</label>
+    <div class="col-sm-9">
+        <input type="text" class="form-control" id="columnBgColor" name="columnBgColor" placeholder="Enter column Color #000000">
+    </div>
+</div>
+<div class="form-group">
+    <label class="col-sm-3 control-label">Footer</label>
+    <div class="col-sm-9">
+        <input type="text" class="form-control" id="footerTitle" name="footerTitle" placeholder="Enter Footer">
     </div>
 </div>
